Fixed text overlapping images in projects for small screens bug

--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -30,10 +30,8 @@ code {
       @media (min-width: 768px){
       }
       img {
-
         width: 100%;
         vertical-align: middle;
-        position: absolute;
         top: 0px;
         left: 0px;
         @media (min-width: 768px){
